<resources>
    <string name="app_name">ماجرا</string>
    <string name="api_key" translatable="false">AIzaSyA7hFdEUBMZxxk_T17WYW5eiK9P3G0t20E</string>

    <string name="title_home">خانه</string>
    <string name="title_search">جستجو</string>
    <string name="title_add">افزودن</string>
    <string name="title_archive">آرشیو</string>
    <string name="TourName">نام ماجرا</string>
    <string name="location">موقعیت مکانی</string>
    <string name="places">مکان‌ها</string>
    <string name="information">اطلاعات</string>
    <string name="capacity">ظرفیت</string>
    <string name="price">قیمت</string>
    <string name="start_date">تاریخ شروع</string>
    <string name="duration">مدت زمان</string>
    <string name="tl_name">نام راهنمای سفر</string>
    <string name="biography">بیوگرافی</string>
    <string name="nameError">نام نمی‌تواند خالی باشد.</string>
    <string name="lastNameError">نام خانوادگی نمی‌تواند خالی باشد.</string>
    <string name="emailError">فرمت ایمیل نادرست است.</string>
    <string name="passwordError">رمز عبور نمی‌تواند کمتر از ۸ کاراکتر داشته باشد.</string>
    <string name="picture_download_failed">خطا در بارگذاری تصویر</string>
    <string name="picture_not_found">تصویر پیدا نشد.</string>
    <string name="error_connection_lost">ارتباط با شبکه امکان پذیر نیست. لطفا تنظیمات اینترنت را بررسی کنید.</string>
    <string name="error_email_exist">این ایمیل قبلا ثبت‌نام شده است.</string>
    <string name="something_went_wrong">مشکلی پیش آمده، لطفا دوباره تلاش کنید.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="city">شهر</string>
    <string name="title_activity_setting">تنظیمات</string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="createdPlans">ماجراهای ساخته شده من</string>
    <string name="pendingTours">در انتظار تایید</string>
    <string name="confirmedTours">قطعی شده‌ها</string>
    <string name="wanted_list">مواردی که می‌خواهم</string>
    <string name="add_tour_tittle">ماجرای جدید</string>
    <string name="add_plan_tittle">ماجرای جدید</string>

    <string name="date_error">تاریخ شروع نمی‌تواند جلوتر از تاریخ پایان باشد.</string>


    <string name="text_problem">به سفرتان</string>
    <string name="clickable_text_problem">امتیاز دهید.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="fix_errors">لطفا موارد نمایش داده شده را برطرف نمایید.</string>

    <string name="no_place_select">مکانی انتخاب نشده است.\nبرای انتخاب + را کلیک نمایید.</string>

    <string name="recycler_default_error">خطا در دریافت اطلاعات</string>
    <string name="my_tours">ماجراهای ساخته شده من</string>
    <string name="recycler_default_text">موردی یافت نشد.</string>
    <string name="pending_plans">در انتظار تایید</string>
    <string name="date_greater_of_now">برای زمان گذشته نمی‌توانید تعریف کنید.</string>
    <string name="show_more">نمایش بیشتر</string>
    <string name="home_tours">سایر ماجراها</string>
    <string name="home_plans">سایر ماجراها‌</string>
    <string name="toggle_tour">ماجرا</string>
    <string name="plan">ماجرا</string>
    <string name="error_email_or_password_incorrect">ایمیل یا رمز عبور نادرست است.</string>
    <string name="error_login_again">برای ادامه باید دوباره وارد برنامه شوید.</string>
    <string name="error_ticket_not_enough">تیکت کافی نمی‌باشد.</string>
    <string name="report">گزارش اقدام خلاف قانون</string>
    <string name="archived_tours">ماجراهای گذشته</string>
    <string name="success_buy_ticket">خرید با موفقیت انجام شد.</string>
    <string name="add_place">افزودن مکان</string>
    <string name="set_location">انتخاب موقعیت</string>
    <string name="switch_to_passenger">تغییر به مسافر</string>
    <string name="switch_to_leader">تغییر به راهنما</string>
    <string name="leader">راهنمای سفر</string>
    <string name="passenger">مسافر</string>
    <string name="exit">خروج</string>
    <string name="setting">تنظیمات</string>

    <string name="intro_majara">ماجرا</string>
    <string name="intro_subline">گردش کنید گردش ببرید</string>
    <string name="confirm">تایید</string>
    <string name="requests">درخواست‌ها</string>
    <string name="Details">جزئیات</string>
    <string name="of">از</string>
    <string name="date_range">بازه</string>
    <string name="until">تا</string>
    <string name="tour_options">امکانات</string>
    <string name="Places">مکان‌ها</string>
    <string name="register">ثبت‌نام</string>
    <string name="similar_tours">ماجراهای مشابه</string>
    <string name="house">خانه</string>
    <string name="hotel">هتل</string>
    <string name="villa">ویلا</string>
    <string name="suite">سوئیت</string>
    <string name="car">ماشین</string>
    <string name="minibus">مینی بوس</string>
    <string name="bus">اتوبوس</string>
    <string name="van">ون</string>
    <string name="breakfast">صبحانه</string>
    <string name="lunch">ناهار</string>
    <string name="dinner">شام</string>
    <string name="comma">،</string>
    <string name="register_successfully">ثبت‌نام با موفقیت انجام شد</string>
    <string name="tour_ended">ماجرا تمام شده است.</string>
    <string name="decided">قطعی شده</string>
    <string name="pending">در انتظار تایید</string>
    <string name="full_capacity">ظرفیت تکمیل است.</string>
    <string name="nothing_found">موردی یافت نشد</string>
    <string name="count">تعداد</string>
    <string name="buy_ticket">خرید تیکت</string>
    <string name="buy">خرید</string>
    <string name="travel_rate">نظر شما درباره این سفر</string>
    <string name="select_places">انتخاب مکان</string>
    <string name="search">جستجو</string>
    <string name="send">ارسال</string>
    <string name="toggle_place">مکان</string>
    <string name="image_not_found">تصویر یافت نشد</string>

    <string name="passenger_information">اطلاعات مسافر</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="first_name">نام</string>
    <string name="email">ایمیل</string>
    <string name="tl_information">اطلاعات راهنمای سفر</string>
    <string name="gender">جنسیت</string>
    <string name="national_id">کد ملی</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="certificate_of_clean_records">مدرک عدم سوء پیشینه</string>
    <string name="Biography_and_tourism_experience">شرح‌حال و سابقه فعالیت در زمینه گردشگری</string>
    <string name="Language_skills">مهارت های زبانی</string>
    <string name="contacts">راه‌های ارتباطی</string>
    <string name="Phone_number">شماره تماس</string>
    <string name="phone_number_example">برای مثال: 9120000000</string>
    <string name="telegram">تلگرام</string>
    <string name="user_name">نام کاربری</string>
    <string name="no_need_for_AT_sign">نیازی به @ نیست</string>
    <string name="WhatsApp">واتساپ</string>
    <string name="save">ذخیره</string>
    <string name="upgrade_tl">ارتقا به راهنمای سفر</string>
    <string name="Rejected">درخواست رد شده</string>
    <string name="Unknown">ارسال نشده</string>
    <string name="Confirmed">تایید شده</string>
    <string name="Male">مرد</string>
    <string name="Female">زن</string>
    <string name="Image_error">خطا در شناسایی تصویر. لطفا دوباره تلاش کنید.</string>
    <string name="Ok">باشه</string>
    <string name="changed_succesfully">تغییرات با موفقیت ذخیره شد.</string>
    <string name="national_id_limits">کد ملی حتما باید ۱۰ رقم باشد</string>
    <string name="it_is_necessary"> ضروری است.</string>
    <string name="should_older_than_18">سن شما باید بزرگتر از ۱۸ باشد</string>
    <string name="incorrect_phone_number_format_example">فرمت شماره تماس نادرست است. (مثال: 9120000000)</string>
    <string name="too_much_characters">تعداد کاراکتر بیش از حد مجاز است.</string>
    <string name="login">ورود</string>
    <string name="Activation_code_sent_Enter">کد فعالسازی برای ... ارسال شد لطفا کد را وارد کنید.</string>
    <string name="Resent_activation_code">ارسال مجدد کد</string>
    <string name="password">کلمه ‌عبور</string>
    <string name="no_account_question">حسابی در برنامه ندارید؟</string>
    <string name="destination">مقصد</string>
    <string name="end_date">تاریخ پایان</string>
    <string name="no_item_chosen_click_plus">موردی اضافه نشده است.
        برای افزودن + را کلیک نمایید.</string>
    <string name="plan_added_successfully">برنامه سفر با موفقیت اضافه شد.</string>

    <string name="choose_pic">انتخاب عکس</string>
    <string name="place_info">اطلاعات مکان</string>
    <string name="Place_name">نام مکان</string>
    <string name="city_name">نام شهر</string>
    <string name="explanation">توضیحات</string>
    <string name="send_req">ارسال درخواست</string>
    <string name="Adventure">ماجرایی به</string>
    <string name="requested_items">موارد خواسته شده</string>
    <string name="see_req">مشاهده درخواست‌ها</string>
    <string name="suggested_price">قیمت پیشنهادی</string>
    <string name="your_req">درخواست شما</string>
    <string name="schedule">زمان</string>
    <string name="facility">امکانات</string>
    <string name="residence">محل اسکان</string>
    <string name="transportation">وسیله نقلیه</string>
    <string name="Meals">غذا</string>
    <string name="picture_of_place">تصویری از مکان</string>
    <string name="successful_place_request_sent">درخواست اضافه کردن مکان با موفقیت ارسال شد</string>
    <string name="pic_error">خطا در شناسایی تصویر.</string>
    <string name="please_try_again">لطفا دوباره سعی کنید</string>
    <string name="request_sent">درخواست با موفقیت ارسال شد.</string>
    <string name="confirmed">تایید شده</string>
    <string name="rejected">رد شده</string>
    <string name="leader_is_set">راهنمای سفر این ماجرا ثبت شده است.</string>
    <string name="successful_add_tour">تور با موفقیت اضافه شد.</string>
    <string name="necessary">ضروری است.</string>
    <string name="capacity_empty">ظرفیت نمی‌تواند خالی باشد.</string>
    <string name="capacity_not_number">ظرفیت باید عدد باشد.</string>
    <string name="capacity_negative">ظرفیت باید بزرگتر از صفر باشد.</string>
    <string name="no_account">حسابی ندارید؟</string>
    <string name="already_registered">قبلا ثبت نام کرده‌اید؟</string>
    <string name="send_verification_email">ارسال ایمیل تایید</string>
    <string name="resend_code">ارسال مجدد کد</string>
    <string name="verification_code_for">کد فعالسازی برای</string>
    <string name="sent_please_enter">ارسال شد. لطفا آن را وارد کنید</string>
    <string name="sent_verification_email">ایمیل تایید با موفقیت ارسال شد. پس از تایید ایمیل دوباره وارد شوید</string>
    <string name="place">مکان</string>
    <string name="rate_cant_empty">امتیاز نمی‌تواند خالی باشد.</string>
    <string name="email_tittle">ارسال ایمیل</string>
    <string name="select">انتخاب</string>
    <string name="cancel">لغو</string>
    <string name="today">امروز</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="choose_file">انتخاب فایل</string>
    <string name="failed_top_to_open_file_chooser">خطا در اجرای انتخابگر فایل. انتخابگری جدید نصب کنید</string>
    <string name="city_is_not_valid">نام شهر معتبر نیست</string>
    <string name="tourname_eng">نام ماجرا انگلیسی</string>
    <string name="destination_eng">مقصد انگلیسی</string>
    <string name="PlaceName_eng">نام مکان انگلیسی</string>
    <string name="cityName_eng">نام شهر انگلیسی</string>
    <string name="explanation_Eng">توضیحات به انگلیسی</string>
    <string name="lastname_eng">نام خانوادگی انگلیسی</string>
    <string name="name_eng">نام انگلیسی</string>
    <string name="gender_eng">جنسیت انگلیسی</string>
    <string name="Biography_and_tourism_experience_eng">شرح حال و سابقه فعالیت گردشگری به انگلیسی</string>
    <string name="Language_skills_eng">مهارت های زبانی به انگلیسی</string>


</resources>