<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.Fargments.HomeFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmedTours"
        style="@style/textTittleMedium"
        android:layout_marginRight="@dimen/margin_medium"
        />
    <ir.blackswan.travelapp.Views.LoadingRecyclerView
        android:id="@+id/rcl_confirmed_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pendingTours"
        style="@style/textTittleMedium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        />
    <ir.blackswan.travelapp.Views.LoadingRecyclerView
        android:id="@+id/rcl_pending_tour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createdPlans"
        style="@style/textTittleMedium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        />
    <ir.blackswan.travelapp.Views.LoadingRecyclerView
        android:id="@+id/rcl_created_plans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"

        />
</LinearLayout>